--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="button-modal-close link" data-modal-close>
+        <button type="submit" class="button-modal-close link" data-modal-close>
           <svg class="modal-close" width="18" height="18">
             <use href="./images/modal-button.svg#icon-modal-button"></use>
           </svg>
@@ -442,7 +442,7 @@
               name="user-tel"
               placeholder="tel"
               required
-              pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
+              value=""
               title="+380 (93) 383 88 33"
             />
           </div>
@@ -474,6 +474,13 @@
               id="user-comment"
               placeholder="Введіть текст"
             ></textarea>
+</div>
+
+            <div class="modale-field">
+            <label class="modale-checkbox" for="newsletter"></label>
+              <input type="checkbox" class="checkbox" name="newsletter" id="newsletter" value="" />
+              Погоджуюся з розсилкою та приймаю Умови договору
+              </label>
           </div>
 
           <button type="submit" class="btn-input">Відправити</button>
