--- a/index.html
+++ b/index.html
@@ -419,52 +419,69 @@
             <use href="./images/modal-button.svg#icon-modal-button"></use>
           </svg>
         </button>
-        <p class="modale-title">Залиште свої дані, ми вам передзвонимо</p>
-        <form class="modale-form">
-          <div class="modale-field">
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form class="modal-form">
+          <div class="modal-field">
             <label class="modal-label" for="user-name">Ім'я</label>
             <!-- <span>Ім'я</span> -->
-            <input
-              type="name"
-              class="modale-input"
-              name="user-name"
-              placeholder="Світлана"
-              required
-            />
+            <div class="modal-wrap">
+              <input
+                type="name"
+                class="modal-input link"
+                name="user-name"
+                placeholder="Світлана"
+                required
+              />
+              <svg class="input-icon link" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
 
-          <div class="modale-field">
+          <div class="modal-field">
             <label class="modal-label" for="user-tel">Телефон </label>
             <!-- <span>Телефон</span> -->
-            <input
-              type="tel"
-              class="modale-input"
-              name="user-tel"
-              placeholder="tel"
-              required
-              value=""
-              title="+380 (93) 383 88 33"
-            />
+
+            <div class="modal-wrap">
+              <input
+                type="tel"
+                class="modal-input link"
+                name="user-tel"
+                placeholder="введіть номер телефону"
+                required
+                value=""
+                title="+380 (93) 383 88 33"
+              />
+              <svg class="input-icon link" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
 
           <!-- value="" -->
-          <div class="modale-field">
+          <div class="modal-field">
             <label class="modal-label" for="user-email">Пошта</label>
             <!-- <span>Пошта</span> -->
-            <input
-              type="email"
-              class="modale-input"
-              name="user-email"
-              placeholder="email"
-              required
-            />
+
+            <div class="modal-wrap">
+              <input
+                type="email"
+                class="modal-input link"
+                name="user-email"
+                placeholder="введіть адресу ел.пошти"
+                required
+              />
+              <svg class="input-icon link" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
-          <div class="modale-field">
+          <div class="modal-field">
             <label class="modal-label" for="user-comment">Коментар</label>
             <!-- <span>Коментар</span> -->
             <!-- <input
               type="text"
-              class="modale-input comment"
+              class="modal-input comment"
               name="user-comment"
               placeholder="Введіть текст"
             /> -->
@@ -474,14 +491,27 @@
               id="user-comment"
               placeholder="Введіть текст"
             ></textarea>
-</div>
-
-            <div class="modale-field">
-            <label class="modale-checkbox" for="newsletter"></label>
-              <input type="checkbox" class="checkbox" name="newsletter" id="newsletter" value="" />
-              Погоджуюся з розсилкою та приймаю Умови договору
-              </label>
           </div>
+          <!-- за Данилком -->
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              class="checkbox-text visually-hidden"
+              name="newsletter"
+              id="newsletter"
+              value=""
+            />
+            <label class="modal-checkbox" for="newsletter">
+              <span>
+                <svg class="check-icon" width="11" height="8">
+                  <use href="./images/icons.svg#icon-vector-check"></use>
+                </svg>
+              </span>
+              Погоджуюся з розсилкою та приймаю Умови договору</label
+            >
+          </div>
+
+          <!-- за Репетою -->
 
           <button type="submit" class="btn-input">Відправити</button>
         </form>
