додає розсилку в футері

--- a/index.html
+++ b/index.html
@@ -143,28 +143,28 @@
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="text" lang="en">Product Designer</p>
                 <ul class="userpic">
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link">
                       <svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram-2-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin-1-1"></use>
@@ -186,28 +186,28 @@
                 <h3 class="title">Ольга Репина</h3>
                 <p class="text" lang="en">Frontend Developer</p>
                 <ul class="userpic">
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link">
                       <svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram-2-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin-1-1"></use>
@@ -229,28 +229,28 @@
                 <h3 class="title">Николай Тарасов</h3>
                 <p class="text" lang="en">Marketing</p>
                 <ul class="userpic">
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link">
                       <svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram-2-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin-1-1"></use>
@@ -272,28 +272,28 @@
                 <h3 class="title">Михаил Ермаков</h3>
                 <p class="text" lang="en">UI Designer</p>
                 <ul class="userpic">
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link">
                       <svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram-2-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook-1-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="userpic-item link">
+                  <li class="userpic-item">
                     <a href="" class="userpic-link link"
                       ><svg class="userpic-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin-1-1"></use>
@@ -321,35 +321,35 @@
 
             <li class="pic-icon">
               <a href="" class="pic-item link">
-                <svg class="pic-icon-item link" width="106" height="60">
+                <svg class="pic-icon-item" width="106" height="60">
                   <use href="./images/symbol-logo.svg#icon-Logo-company"></use>
                 </svg>
               </a>
             </li>
             <li class="pic-icon">
               <a href="" class="pic-item link">
-                <svg class="pic-icon-item link" width="106" height="60">
+                <svg class="pic-icon-item" width="106" height="60">
                   <use href="./images/symbol-logo.svg#icon-Logo-company-two"></use>
                 </svg>
               </a>
             </li>
             <li class="pic-icon">
               <a href="" class="pic-item link">
-                <svg class="pic-icon-item link" width="106" height="60">
+                <svg class="pic-icon-item" width="106" height="60">
                   <use href="./images/symbol-logo.svg#icon-Logo-foster"></use>
                 </svg>
               </a>
             </li>
             <li class="pic-icon">
               <a href="" class="pic-item link">
-                <svg class="pic-icon-item link" width="106" height="60">
+                <svg class="pic-icon-item" width="106" height="60">
                   <use href="./images/symbol-logo.svg#icon-Logo-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="pic-icon">
               <a href="" class="pic-item link">
-                <svg class="pic-icon-item link" width="106" height="60">
+                <svg class="pic-icon-item" width="106" height="60">
                   <use href="./images/symbol-logo.svg#icon-Logo-cube"></use>
                 </svg>
               </a>
@@ -409,6 +409,16 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!----- РОЗСИЛКА ----->
+        <div class="online">
+          <p class="footer-soc">Підпишіться на розсилку</p>
+          <form class="online-form">
+            <input type="E-mail" class="online-input link" name="newsletter" placeholder="E-mail" />
+            <div class="online">
+              <button type="submit" class="btn-input-online link">Підписатися</button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
@@ -486,7 +496,7 @@
               placeholder="Введіть текст"
             /> -->
             <textarea
-              class="modal-comment comment"
+              class="modal-comment link"
               name="user-comment"
               id="user-comment"
               placeholder="Введіть текст"
@@ -501,7 +511,7 @@
               id="newsletter"
               value=""
             />
-            <label class="modal-checkbox" for="newsletter">
+            <label class="modal-checkbox link" for="newsletter">
               <span>
                 <svg class="check-icon" width="11" height="8">
                   <use href="./images/icons.svg#icon-vector-check"></use>
@@ -513,7 +523,7 @@
 
           <!-- за Репетою -->
 
-          <button type="submit" class="btn-input">Відправити</button>
+          <button type="submit" class="btn-input link">Відправити</button>
         </form>
       </div>
     </div>
