--- a/index.html
+++ b/index.html
@@ -410,8 +410,9 @@
             </li>
           </ul>
         </div>
+
         <!----- РОЗСИЛКА ----->
-        <div class="online">
+        <label class="online">
           <p class="footer-soc">Підпишіться на розсилку</p>
           <form class="online-form">
             <input type="E-mail" class="online-input link" name="newsletter" placeholder="E-mail" />
@@ -419,7 +420,7 @@
               <button type="submit" class="btn-input-online link">Підписатися</button>
             </div>
           </form>
-        </div>
+        </label>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -511,14 +512,14 @@
               id="newsletter"
               value=""
             />
-            <label class="modal-checkbox link" for="newsletter">
+            <label class="modal-checkbox" for="newsletter">
               <span>
                 <svg class="check-icon" width="11" height="8">
                   <use href="./images/icons.svg#icon-vector-check"></use>
                 </svg>
               </span>
-              Погоджуюся з розсилкою та приймаю Умови договору</label
-            >
+              <div class="check-text">Погоджуюся з розсилкою та приймаю Умови договору</div>
+            </label>
           </div>
 
           <!-- за Репетою -->
