ставить кнопку у футері збоку, додає кому вховер text

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,13 @@
           >
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="link">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link current list-current">Портфолио</a>
+              <a href="./portfolio.html" class="link current list-current">Портфоліо</a>
             </li>
             <li class="item">
-              <a href="" class="link">Контакты</a>
+              <a href="" class="link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -95,7 +95,7 @@
                     src="./images/homework-img-1.jpg"
                     alt="Робота наших працівників"
                   />
-                  <p class="product-text">
+                  <p class="product-text link">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li class="section-image-item li-thumb">
-              <a href="" class="link-hover link-box link">
+              <a href="" class="link-hover link-box">
                 <div class="product-thumb">
                   <img class="img" src="./images/homework-img-2.jpg" alt="Постер Новий Орлеан" />
                   <div class="product-box">
@@ -310,6 +310,15 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!----- РОЗСИЛКА ----->
+        <div class="online">
+          <p class="footer-soc">Підпишіться на розсилку</p>
+          <form class="online-form">
+            <input type="E-mail" class="online-input link" name="newsletter" placeholder="E-mail" />
+
+            <button type="submit" class="btn-input-online link">Підписатися</button>
+          </form>
         </div>
       </div>
     </footer>
