--- a/index.html
+++ b/index.html
@@ -517,7 +517,10 @@
                   <use href="./images/icons.svg#icon-vector-check"></use>
                 </svg>
               </span>
-              <div class="check-text">Погоджуюся з розсилкою та приймаю Умови договору</div>
+              <div class="check-text">
+                Погоджуюся з розсилкою та приймаю
+                <a href="#" class="check-link link">Умови договору</a>
+              </div>
             </label>
           </div>
 
