додає підкреслення Умови

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
               id="newsletter"
               value=""
             />
-            <label class="modal-checkbox" for="newsletter">
+            <label class="modal-checkbox link" for="newsletter">
               <span>
                 <svg class="check-icon" width="11" height="8">
                   <use href="./images/icons.svg#icon-vector-check"></use>
@@ -519,7 +519,7 @@
               </span>
               <div class="check-text">
                 Погоджуюся з розсилкою та приймаю
-                <a href="#" class="check-link link">Умови договору</a>
+                <a href="https://google.com" class="check-link link">Умови договору</a>
               </div>
             </label>
           </div>
