виправляє помилки валідатор

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
     <!--Шапка-->
     <header class="header">
@@ -50,7 +49,6 @@
               info@devstudio.com
             </a>
           </li>
-
           <li class="item-nav">
             <a href="tel:+380961111111" class="link link-search">
               <svg class="tiny" width="10" height="16">
@@ -306,7 +304,6 @@
           </ul>
         </div>
       </section>
-
       <section class="section-coworker page-coworker">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
@@ -318,7 +315,6 @@
                 </svg>
               </a>
             </li>
-
             <li class="pic-icon">
               <a href="" class="pic-item link">
                 <svg class="pic-icon-item" width="106" height="60">
@@ -410,13 +406,11 @@
             </li>
           </ul>
         </div>
-
-        <!----- РОЗСИЛКА ----->
+        <!-- РОЗСИЛКА -->
         <div class="online">
           <p class="footer-soc">Підпишіться на розсилку</p>
           <form class="online-form">
-            <input type="E-mail" class="online-input link" name="newsletter" placeholder="E-mail" />
-
+            <input type="email" class="online-input link" name="newsletter" placeholder="E-mail" />
             <button type="submit" class="btn-input-online link">Підписатися</button>
           </form>
         </div>
@@ -432,11 +426,11 @@
         <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
         <form class="modal-form">
           <div class="modal-field">
-            <label class="modal-label" for="user-name">Ім'я</label>
+            <label class="modal-label" for="user_name">Ім'я</label>
             <!-- <span>Ім'я</span> -->
             <div class="modal-wrap">
               <input
-                type="name"
+                type="text"
                 class="modal-input link"
                 name="user-name"
                 placeholder="Світлана"
@@ -447,11 +441,9 @@
               </svg>
             </div>
           </div>
-
           <div class="modal-field">
-            <label class="modal-label" for="user-tel">Телефон </label>
+            <label class="modal-label" for="user_tel">Телефон </label>
             <!-- <span>Телефон</span> -->
-
             <div class="modal-wrap">
               <input
                 type="tel"
@@ -467,12 +459,10 @@
               </svg>
             </div>
           </div>
-
           <!-- value="" -->
           <div class="modal-field">
-            <label class="modal-label" for="user-email">Пошта</label>
+            <label class="modal-label" for="user_email">Пошта</label>
             <!-- <span>Пошта</span> -->
-
             <div class="modal-wrap">
               <input
                 type="email"
@@ -487,7 +477,7 @@
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="user-comment">Коментар</label>
+            <label class="modal-label" for="user_comment">Коментар</label>
             <!-- <span>Коментар</span> -->
             <!-- <input
               type="text"
@@ -523,9 +513,7 @@
               </div>
             </label>
           </div>
-
           <!-- за Репетою -->
-
           <button type="submit" class="btn-input link">Відправити</button>
         </form>
       </div>
@@ -533,4 +521,3 @@
     <script src="./js/modal.js"></script>
   </body>
 </html>
-width="370" height="294"
