--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,6 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
     <!--Шапка-->
     <header class="header">
@@ -50,7 +49,6 @@
               info@devstudio.com
             </a>
           </li>
-
           <li class="item-nav">
             <a href="tel:+380961111111" class="link link-search">
               <svg class="tiny" width="10" height="16">
@@ -102,7 +100,6 @@
                   </p>
                   <!-- </div> -->
                 </div>
-
                 <div class="portfolio-team-box">
                   <h3 class="item">Технокряк</h3>
                   <p class="texts">Веб-сайт</p>
@@ -121,7 +118,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="portfolio-team-box">
                   <h3 class="item">Постер <span lang="en"> New Orlean vs Golden Star</span></h3>
                   <p class="texts">Дизайн</p>
@@ -140,7 +136,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="portfolio-team-box">
                   <h3 class="item">Ресторан <span lang="en">Seafood</span></h3>
                   <p class="texts">Додаток</p>
@@ -311,12 +306,11 @@
             </li>
           </ul>
         </div>
-        <!----- РОЗСИЛКА ----->
+        <!-- РОЗСИЛКА -->
         <div class="online">
           <p class="footer-soc">Підпишіться на розсилку</p>
           <form class="online-form">
-            <input type="E-mail" class="online-input link" name="newsletter" placeholder="E-mail" />
-
+            <input type="email" class="online-input link" name="newsletter" placeholder="E-mail" />
             <button type="submit" class="btn-input-online link">Підписатися</button>
           </form>
         </div>
